--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
     <title>MyDiary</title>
+    <link rel="icon" href="/images/mydiarylogo.jpg">
 </head>
 <body>
    
