--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>MyDiary</title>
+  <link rel="icon" type="image" href="/images/mydiarylogo.jpg">
+
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/styles.css">
